# aqui

./: .gitignore  README.md  com.fyralabs.Aqui.json  meson.build
.github/workflows/: deploy.yml
data/: aqui.desktop.in  aqui.gresource.xml  aqui.gschema.xml  aqui.metainfo.xml.in  meson.build  style.css
src/: Application.vala  Favorites.vala  GeoClue.vala  LocationMarker.vala  LocationResult.vala  MainWindow.vala  Spinner.vala  Utils.vala  Wikipedia.vala
